# UCV-ATE-SI-LAB01

./: README.md  lab1_IA_basico.ipynb  pyproject.toml  requirements.txt  sesion1_IA_basico.ipynb
src/laboratorio1_ia/: main.py
tests/: test_main.py
